src/boardparser/PingballParser.java
// Generated from src\boardparser\Pingball.g4 by ANTLR 4.4

package boardparser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PingballParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__24=1, T__23=2, T__22=3, T__21=4, T__20=5, T__19=6, T__18=7, T__17=8, 
		T__16=9, T__15=10, T__14=11, T__13=12, T__12=13, T__11=14, T__10=15, T__9=16, 
		T__8=17, T__7=18, T__6=19, T__5=20, T__4=21, T__3=22, T__2=23, T__1=24, 
		T__0=25, FLOAT=26, NAME=27, EQUALS=28, COMMENT=29, NEWLINE=30, WS=31;
	public static final String[] tokenNames = {
		"<INVALID>", "'board'", "'otherBoard'", "'height'", "'xVelocity'", "'name'", 
		"'y'", "'friction2'", "'fire'", "'squareBumper'", "'action'", "'otherPortal'", 
		"'orientation'", "'ball'", "'portal'", "'absorber'", "'x'", "'rightFlipper'", 
		"'width'", "'trigger'", "'friction1'", "'circleBumper'", "'yVelocity'", 
		"'triangleBumper'", "'leftFlipper'", "'gravity'", "FLOAT", "NAME", "'='", 
		"COMMENT", "NEWLINE", "WS"
	};
	public static final int
		RULE_root = 0, RULE_file = 1, RULE_board_header = 2, RULE_board_arguments = 3, 
		RULE_gravity = 4, RULE_friction1 = 5, RULE_friction2 = 6, RULE_gadget = 7, 
		RULE_ball = 8, RULE_squareBumper = 9, RULE_circleBumper = 10, RULE_triangleBumper = 11, 
		RULE_rightFlipper = 12, RULE_leftFlipper = 13, RULE_absorber = 14, RULE_portal = 15, 
		RULE_trigger = 16, RULE_name_input = 17, RULE_location_input = 18, RULE_orientation_input = 19, 
		RULE_ball_location_input = 20, RULE_ball_velocity_input = 21, RULE_absorber_dimensions_input = 22, 
		RULE_portal_other_board_name_input = 23, RULE_portal_other_portal_name_input = 24;
	public static final String[] ruleNames = {
		"root", "file", "board_header", "board_arguments", "gravity", "friction1", 
		"friction2", "gadget", "ball", "squareBumper", "circleBumper", "triangleBumper", 
		"rightFlipper", "leftFlipper", "absorber", "portal", "trigger", "name_input", 
		"location_input", "orientation_input", "ball_location_input", "ball_velocity_input", 
		"absorber_dimensions_input", "portal_other_board_name_input", "portal_other_portal_name_input"
	};

	@Override
	public String getGrammarFileName() { return "Pingball.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PingballParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PingballParser.EOF, 0); }
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); file();
			setState(51); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public List<GadgetContext> gadget() {
			return getRuleContexts(GadgetContext.class);
		}
		public GadgetContext gadget(int i) {
			return getRuleContext(GadgetContext.class,i);
		}
		public Board_headerContext board_header() {
			return getRuleContext(Board_headerContext.class,0);
		}
		public TriggerContext trigger(int i) {
			return getRuleContext(TriggerContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PingballParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PingballParser.NEWLINE, i);
		}
		public List<TriggerContext> trigger() {
			return getRuleContexts(TriggerContext.class);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); board_header();
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(54); match(NEWLINE);
				setState(57);
				switch (_input.LA(1)) {
				case T__16:
				case T__12:
				case T__11:
				case T__10:
				case T__8:
				case T__4:
				case T__2:
				case T__1:
					{
					setState(55); gadget();
					}
					break;
				case T__17:
					{
					setState(56); trigger();
					}
					break;
				case EOF:
				case NEWLINE:
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Board_headerContext extends ParserRuleContext {
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Board_argumentsContext board_arguments() {
			return getRuleContext(Board_argumentsContext.class,0);
		}
		public Board_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_board_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterBoard_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitBoard_header(this);
		}
	}

	public final Board_headerContext board_header() throws RecognitionException {
		Board_headerContext _localctx = new Board_headerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_board_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); match(T__24);
			setState(66);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(65); name_input();
				}
			}

			setState(68); board_arguments();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Board_argumentsContext extends ParserRuleContext {
		public Friction1Context friction1() {
			return getRuleContext(Friction1Context.class,0);
		}
		public Friction2Context friction2() {
			return getRuleContext(Friction2Context.class,0);
		}
		public GravityContext gravity() {
			return getRuleContext(GravityContext.class,0);
		}
		public Board_argumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_board_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterBoard_arguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitBoard_arguments(this);
		}
	}

	public final Board_argumentsContext board_arguments() throws RecognitionException {
		Board_argumentsContext _localctx = new Board_argumentsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_board_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(70); gravity();
				}
			}

			setState(74);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(73); friction1();
				}
			}

			setState(77);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(76); friction2();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GravityContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(PingballParser.EQUALS, 0); }
		public TerminalNode FLOAT() { return getToken(PingballParser.FLOAT, 0); }
		public GravityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gravity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterGravity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitGravity(this);
		}
	}

	public final GravityContext gravity() throws RecognitionException {
		GravityContext _localctx = new GravityContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_gravity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(T__0);
			setState(80); match(EQUALS);
			setState(81); match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Friction1Context extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(PingballParser.EQUALS, 0); }
		public TerminalNode FLOAT() { return getToken(PingballParser.FLOAT, 0); }
		public Friction1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_friction1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterFriction1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitFriction1(this);
		}
	}

	public final Friction1Context friction1() throws RecognitionException {
		Friction1Context _localctx = new Friction1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_friction1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(T__5);
			setState(84); match(EQUALS);
			setState(85); match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Friction2Context extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(PingballParser.EQUALS, 0); }
		public TerminalNode FLOAT() { return getToken(PingballParser.FLOAT, 0); }
		public Friction2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_friction2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterFriction2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitFriction2(this);
		}
	}

	public final Friction2Context friction2() throws RecognitionException {
		Friction2Context _localctx = new Friction2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_friction2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(T__18);
			setState(88); match(EQUALS);
			setState(89); match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GadgetContext extends ParserRuleContext {
		public LeftFlipperContext leftFlipper() {
			return getRuleContext(LeftFlipperContext.class,0);
		}
		public TriangleBumperContext triangleBumper() {
			return getRuleContext(TriangleBumperContext.class,0);
		}
		public AbsorberContext absorber() {
			return getRuleContext(AbsorberContext.class,0);
		}
		public BallContext ball() {
			return getRuleContext(BallContext.class,0);
		}
		public RightFlipperContext rightFlipper() {
			return getRuleContext(RightFlipperContext.class,0);
		}
		public SquareBumperContext squareBumper() {
			return getRuleContext(SquareBumperContext.class,0);
		}
		public PortalContext portal() {
			return getRuleContext(PortalContext.class,0);
		}
		public CircleBumperContext circleBumper() {
			return getRuleContext(CircleBumperContext.class,0);
		}
		public GadgetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gadget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterGadget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitGadget(this);
		}
	}

	public final GadgetContext gadget() throws RecognitionException {
		GadgetContext _localctx = new GadgetContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_gadget);
		try {
			setState(99);
			switch (_input.LA(1)) {
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(91); ball();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(92); squareBumper();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(93); circleBumper();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 4);
				{
				setState(94); triangleBumper();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 5);
				{
				setState(95); rightFlipper();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 6);
				{
				setState(96); leftFlipper();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 7);
				{
				setState(97); absorber();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 8);
				{
				setState(98); portal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BallContext extends ParserRuleContext {
		public Ball_location_inputContext ball_location_input() {
			return getRuleContext(Ball_location_inputContext.class,0);
		}
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Ball_velocity_inputContext ball_velocity_input() {
			return getRuleContext(Ball_velocity_inputContext.class,0);
		}
		public BallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ball; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterBall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitBall(this);
		}
	}

	public final BallContext ball() throws RecognitionException {
		BallContext _localctx = new BallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ball);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(T__12);
			setState(103);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(102); name_input();
				}
			}

			setState(105); ball_location_input();
			setState(106); ball_velocity_input();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SquareBumperContext extends ParserRuleContext {
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Location_inputContext location_input() {
			return getRuleContext(Location_inputContext.class,0);
		}
		public SquareBumperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_squareBumper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterSquareBumper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitSquareBumper(this);
		}
	}

	public final SquareBumperContext squareBumper() throws RecognitionException {
		SquareBumperContext _localctx = new SquareBumperContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_squareBumper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(T__16);
			setState(110);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(109); name_input();
				}
			}

			setState(112); location_input();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CircleBumperContext extends ParserRuleContext {
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Location_inputContext location_input() {
			return getRuleContext(Location_inputContext.class,0);
		}
		public CircleBumperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circleBumper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterCircleBumper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitCircleBumper(this);
		}
	}

	public final CircleBumperContext circleBumper() throws RecognitionException {
		CircleBumperContext _localctx = new CircleBumperContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_circleBumper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(T__4);
			setState(116);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(115); name_input();
				}
			}

			setState(118); location_input();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriangleBumperContext extends ParserRuleContext {
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Orientation_inputContext orientation_input() {
			return getRuleContext(Orientation_inputContext.class,0);
		}
		public Location_inputContext location_input() {
			return getRuleContext(Location_inputContext.class,0);
		}
		public TriangleBumperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_triangleBumper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterTriangleBumper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitTriangleBumper(this);
		}
	}

	public final TriangleBumperContext triangleBumper() throws RecognitionException {
		TriangleBumperContext _localctx = new TriangleBumperContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_triangleBumper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); match(T__2);
			setState(122);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(121); name_input();
				}
			}

			setState(124); location_input();
			setState(126);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(125); orientation_input();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightFlipperContext extends ParserRuleContext {
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Orientation_inputContext orientation_input() {
			return getRuleContext(Orientation_inputContext.class,0);
		}
		public Location_inputContext location_input() {
			return getRuleContext(Location_inputContext.class,0);
		}
		public RightFlipperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightFlipper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterRightFlipper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitRightFlipper(this);
		}
	}

	public final RightFlipperContext rightFlipper() throws RecognitionException {
		RightFlipperContext _localctx = new RightFlipperContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_rightFlipper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(T__8);
			setState(130);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(129); name_input();
				}
			}

			setState(132); location_input();
			setState(134);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(133); orientation_input();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftFlipperContext extends ParserRuleContext {
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Orientation_inputContext orientation_input() {
			return getRuleContext(Orientation_inputContext.class,0);
		}
		public Location_inputContext location_input() {
			return getRuleContext(Location_inputContext.class,0);
		}
		public LeftFlipperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftFlipper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterLeftFlipper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitLeftFlipper(this);
		}
	}

	public final LeftFlipperContext leftFlipper() throws RecognitionException {
		LeftFlipperContext _localctx = new LeftFlipperContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_leftFlipper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(T__1);
			setState(138);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(137); name_input();
				}
			}

			setState(140); location_input();
			setState(142);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(141); orientation_input();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbsorberContext extends ParserRuleContext {
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Location_inputContext location_input() {
			return getRuleContext(Location_inputContext.class,0);
		}
		public Absorber_dimensions_inputContext absorber_dimensions_input() {
			return getRuleContext(Absorber_dimensions_inputContext.class,0);
		}
		public AbsorberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absorber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterAbsorber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitAbsorber(this);
		}
	}

	public final AbsorberContext absorber() throws RecognitionException {
		AbsorberContext _localctx = new AbsorberContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_absorber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(T__10);
			setState(146);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(145); name_input();
				}
			}

			setState(148); location_input();
			setState(149); absorber_dimensions_input();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortalContext extends ParserRuleContext {
		public Portal_other_portal_name_inputContext portal_other_portal_name_input() {
			return getRuleContext(Portal_other_portal_name_inputContext.class,0);
		}
		public Name_inputContext name_input() {
			return getRuleContext(Name_inputContext.class,0);
		}
		public Portal_other_board_name_inputContext portal_other_board_name_input() {
			return getRuleContext(Portal_other_board_name_inputContext.class,0);
		}
		public Location_inputContext location_input() {
			return getRuleContext(Location_inputContext.class,0);
		}
		public PortalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_portal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterPortal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitPortal(this);
		}
	}

	public final PortalContext portal() throws RecognitionException {
		PortalContext _localctx = new PortalContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_portal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); match(T__11);
			setState(153);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(152); name_input();
				}
			}

			setState(155); location_input();
			setState(157);
			_la = _input.LA(1);
			if (_la==T__23) {
				{
				setState(156); portal_other_board_name_input();
				}
			}

			setState(159); portal_other_portal_name_input();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriggerContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(PingballParser.NAME, i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(PingballParser.EQUALS); }
		public List<TerminalNode> NAME() { return getTokens(PingballParser.NAME); }
		public TerminalNode EQUALS(int i) {
			return getToken(PingballParser.EQUALS, i);
		}
		public TriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trigger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterTrigger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitTrigger(this);
		}
	}

	public final TriggerContext trigger() throws RecognitionException {
		TriggerContext _localctx = new TriggerContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_trigger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161); match(T__17);
			setState(162); match(T__6);
			setState(163); match(EQUALS);
			setState(164); match(NAME);
			setState(165); match(T__15);
			setState(166); match(EQUALS);
			setState(167); match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_inputContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(PingballParser.EQUALS, 0); }
		public TerminalNode NAME() { return getToken(PingballParser.NAME, 0); }
		public Name_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).enterName_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingballListener ) ((PingballListener)listener).exitName_input(this);
		}
	}

	public final Name_inputContext name_input() throws RecognitionException {
		Name_inputContext _localctx = new Name_inputContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_name_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169); match(T__20);
			setState(170); match(EQUALS);
			setState(171); match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
